2008-01-25  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/rand.cc (Frandp): Relax relative error on randp
	tests.

2008-01-25  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.h.in (base_properties::get_backend,
	base_graphics_object::get_backend, graphics_backend::get_backend):
	New methods for convenient access to the backend.
	(figure::get_backend, figure::set_backend): Remove.
	* graphics.cc (base_properties::get_backend): New method.
	(Fdrawnow): Use graphics_object::get_backend to simplify code.

2008-01-24  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* mxarray.h.in: Include <cstring>.

2008-01-22  John W. Eaton  <jwe@octave.org>

	* graphics.cc (clear_drawnow_request): New function.
	(Fdrawnow): Add it to the unwind_protect stack.

	* input.cc (Vdrawnow_requested): No longer static.
	* input.h: Provide decl.
	* graphics.cc (Fdrawnow, Fset, make_graphics_object):
	Use Vdrawnow_requested directly.

	* toplev.cc (octave_add_atexit_function,
	octave_remove_atexit_function): New functions.
	(Fatexit): Use them.
	* graphics.cc (Fdrawnow): Call octave_add_atexit_function instead
	of using eval.
	* toplev.h (octave_add_atexit_function,
	octave_remove_atexit_function): Provide decls.

2008-01-22  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.h.in (base_properties::is_visible,
	base_properties::set_modified): New accessors.
	(class base_graphics_backend, class graphics_backend): New classes
	for handling octave/backend interaction.
	(figure::properties::close): Add "pop" argument controlling
	whether the figure should be popped from the list of existing figures.
	(class figure::properties): New backend field and accessors, holding
	the graphics backend associated with the figure.
	* graphics.cc (class gnuplot_backend): New class for the default
	gnuplot backend.
	(figure::properties::close): Add "pop" argument and transfer the
	figure closing to the associated backend.
	(Fdrawnow): New builtin function, converted from drawnow.m.
